--- a/README
+++ b/README
@@ -5,6 +5,8 @@ Ported from http://code.google.com/p/google-authenticator/
 - Adds own demo app (auth-demo.php, style.css, dump.sql).
 - Adds totp.php to help understand the TOTP algorithm.
 
+This script is discussed in [c't Magazin issue 11/2016](http://www.heise.de/ct/ausgabe/2016-11-Zwei-Faktor-Authentifizierung-mit-Einmal-Passwoertern-3198093.html).
+
 ##Issues:
 
 The demo app's user interface is in German. If there's interest I might translate it.
